--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 bincode = "1.3.3"
 byteorder = "1.5.0"
+ndarray = { version = "0.15.6", features = ["rayon"] }
 rand = "0.8.5"
+serde = { version = "1.0.194", features = ["derive"] }
+serde_json = "1.0.110"
 tempfile = "3.9.0"
